fix: wrong footer flex spacing

--- a/assets/scss/common/footer.scss
+++ b/assets/scss/common/footer.scss
@@ -66,6 +66,21 @@
     font-size: large;
 }
 
+.entry-footer-home {
+  color: var(--secondary);
+  font-size: 13px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+@media screen and (max-width: 768px) {
+    .entry-footer-home {
+        display: block;
+    }
+}
+
+
 .home-taxonomies a:hover {
     color: var(--primary);
     border-bottom: 1px solid var(--primary);
